--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -45,6 +45,11 @@ input[type] /* only set width for text input */
 	width: auto;
 }
 
+textarea {
+	width: 90%;
+	height: 6em;
+}
+
 table.bordered, table.bordered td, table.bordered th {
 	border: 1px solid #ccc;
 	border-collapse: collapse;
@@ -195,11 +200,17 @@ html[dir="rtl"] #fixed
 	z-index: 10;
 	top: 20px;
 	right: 20px;
-	font-size: 250%;
+	font-size: 200%;
 	font-weight: bold;
 	padding: 40px;
 	color: #b3b3b3;
 	background-color: #7da;
+}
+
+#dismiss-notice {
+	font-size: 50%;
+	margin: 0 auto;
+	font-weight: normal;
 }
 
 html[dir="rtl"] #note
