preferences.css: use relative dir for showing screenshot img for Chrome.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6067 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -98,7 +98,7 @@ html[dir="rtl"] .module-link
 	float: right;
 	width: 16px;
 	height: 16px;
-	background: url("chrome://foxtrick/content/resources/img/screenshot.png") no-repeat 50% 50%;
+	background: url("../img/screenshot.png") no-repeat 50% 50%;
 }
 
 html[dir="rtl"] .screenshot
@@ -108,7 +108,7 @@ html[dir="rtl"] .screenshot
 
 .screenshot:hover
 {
-	background-image: url("chrome://foxtrick/content/resources/img/screenshot-hover.png");
+	background-image: url("../img/screenshot-hover.png");
 }
 
 .clear
