--- a/content/resources/css/highlight-ownerless.css
+++ b/content/resources/css/highlight-ownerless.css
@@ -1,5 +1,5 @@
 .ft-ownerless {
-	background-image: url("../img/ownerless.png");
+	background-image: url("chrome://foxtrick/content/resources/img/ownerless.png");
 	background-repeat: no-repeat;
 	padding: 0px 0px 0px 11px;
 }
