Youth Series with 12 teams >> fix for vertical lines
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6124 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/fixes/League_Table.css
+++ b/content/resources/css/fixes/League_Table.css
@@ -45,7 +45,11 @@
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl05_td1,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl06_td1,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl07_td1,
-#ctl00_ctl00_CPContent_CPMain_repLeague_ctl08_td1
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl08_td1,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl09_td1,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl10_td1,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl11_td1,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl12_td1
 {
     border-left: 2px solid #DCE0DC;
 }
@@ -59,6 +63,10 @@
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl06_td3,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl07_td3,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl08_td3,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl09_td3,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl10_td3,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl11_td3,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl12_td3,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl00_td4,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl01_td4,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl02_td4,
@@ -67,7 +75,11 @@
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl05_td4,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl06_td4,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl07_td4,
-#ctl00_ctl00_CPContent_CPMain_repLeague_ctl08_td4
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl08_td4,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl09_td4,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl10_td4,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl11_td4,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl12_td4
 {
     border-right: 2px solid #DCE0DC;
 }
