foxtrick.css: hide overflowing content in .ft-note.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6161 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -76,6 +76,7 @@ td.ft-lineup-cell { vertical-align: middle !important; }
 	clear: both;
 	margin: 10px 0;
 	padding: 7px 10px;
+	overflow: hidden;
 }
 
 .ft-note a.close {
