nt-peek.js: enable on country page.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6174 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/nt-peek.css
+++ b/content/resources/css/nt-peek.css
@@ -1,9 +1,9 @@
-.ft-nt-peek div:nth-child(2) {
+.ft-nt-peek > .ft-nt-peek-nt {
 	width: 48%;
 	float: left;
 }
 
-.ft-nt-peek div:nth-child(3) {
+.ft-nt-peek > .ft-nt-peek-u20 {
 	width: 48%;
 	float: right;
 }
