Introduce MyMonitor and restrict NtPeek to league pages.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6224 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -4,7 +4,7 @@
 #stageLogo {background-image: url('chrome://foxtrick/content/resources/img/logo_green_stage_foxtrick.png') !important;}
 
 /* faux-link */
-.ft-link { cursor: pointer; }
+.ft-link { cursor: pointer; text-decoration: underline; }
 
 /* icons and hover icons */
 .ft_actionicon {cursor: pointer; height: 16px; background: 50% no-repeat; }
