my-monitor.css: place frames two in a row.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6256 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/my-monitor.css
+++ b/content/resources/css/my-monitor.css
@@ -16,6 +16,10 @@
 	float: left;
 }
 
+.ft-monitor-frame:nth-child(odd) {
+	clear: left; /* two in a row */
+}
+
 .ft-monitor-remove {
 	background-image: url("chrome://foxtrick/content/resources/img/cross_small.png");
 	width: 12px;
