my-monitor.js: use sidebar box to add teams and add links.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6269 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/my-monitor.css
+++ b/content/resources/css/my-monitor.css
@@ -32,3 +32,7 @@
 .ft-monitor-remove:hover {
 	background-image: url("chrome://foxtrick/content/resources/img/crossRed_small.png");
 }
+
+#ft-monitor-sidebar-box .hidden {
+	display: none !important; /* need to overwrite */
+}
