mark-all-as-read.css: increase margin-right.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6280 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/mark-all-as-read.css
+++ b/content/resources/css/mark-all-as-read.css
@@ -2,7 +2,7 @@
     background: url("chrome://foxtrick/content/resources/img/tick2.png") no-repeat scroll 50% 50% transparent;
     cursor: pointer;
     height: 16px;
-    margin: 0 0 0 2px;
+    margin: 0 7px 0 2px;
     width: 12px;
     float: right;
 }
