popup-links.css: fix font-size at 11px.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6284 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/popup-links.css
+++ b/content/resources/css/popup-links.css
@@ -2,6 +2,7 @@ span.myht1 {
 	position: relative;
 }
 ul.ft-popup-list {
+	font-size: 11px;
 	display: none;
 	position: absolute;
 	background-color: #ffffff;
