Add support for input[pref] and align table td at center.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6322 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -67,6 +67,10 @@ html[dir="rtl"] table th:first-child {
 	text-align: right;
 }
 
+table td {
+	text-align: center;
+}
+
 .module
 {
 	border: 1px solid #ccc;
