--- a/content/resources/css/seasonstats.css
+++ b/content/resources/css/seasonstats.css
@@ -1,7 +1,5 @@
-@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
-
 .ft_seasonstats_td {
-    padding: 0 0 0 0  !important;
+    padding: 0 1px !important;
 }
 .ft_seasonstats_border_left {
 	border-left: 1px solid #849D84 !important;
@@ -9,6 +7,4 @@
 
 #foxtrick_seasonstats_content th {
 	border-bottom: 2px solid #849D84 !important;
-}
-
 }
