old-style-face/main.css: add fix for team photo by LA-PuhuvaKoira.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6406 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/old-style-face/main.css
+++ b/content/resources/css/old-style-face/main.css
@@ -25,6 +25,18 @@ padding-top: 49px !important;
 display: none;
 }
 
+div#teamPhoto {
+	height: 400px !important;
+}
+div#teamPhoto > div {
+	padding: 0px 70px 0px 80px !important;
+}
+div#teamPhoto div.faceCard {
+	position: relative !important;
+	margin-left: 0px !important;
+	top: 90px !important;
+}
+
 /******************************************BACKGROUND**************************************/
 img[src="/Img/Avatar/backgrounds/bg_blue_int.png"],
 img[src="/Img/Avatar/backgrounds/bg_blue.png"]
