match-player-colouring.css: remove unknown selectors.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6413 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/match-player-colouring.css
+++ b/content/resources/css/match-player-colouring.css
@@ -1,9 +1,4 @@
-.sidebarBox .ft-match-player-home, .sidebarBox .ft-match-player-away,
-.sidebarBox .ft-match-player-mine, .sidebarBox .ft-match-player-unknown {
-}
-
-.ft-match-player-home, .ft-match-player-away,
-.ft-match-player-mine, .ft-match-player-unknown {
+.ft-match-player-home, .ft-match-player-away, .ft-match-player-mine {
 	padding: 0 2px !important;
 }
 
@@ -20,8 +15,4 @@
 }
 
 .ft-match-player-mine {
-}
-
-.ft-match-player-unknown {
-	background: #f0f0f0;
 }
