RemoveTeaserBackground.css: fix!
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6429 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/fixes/RemoveTeaserBackground.css
+++ b/content/resources/css/fixes/RemoveTeaserBackground.css
@@ -1,5 +1,7 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
-body {background:url("bg.png") repeat scroll 0 0 transparent;}
+body {
+	background: url("http://www.hattrick.org/App_Themes/Standard/bg.png") repeat scroll 0 0 transparent !important;
+}
 
 }
