Added CSS styling for Forum and HT mail messages
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6452 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/user-content-example.css
+++ b/content/resources/css/user-content-example.css
@@ -288,3 +288,15 @@
 .ft-ticker-myht {
 	background-color: #dfdfdf;
 }
+
+/* New HT mail */
+.ft-new-mail {
+color: yellow !important;
+font-weight: bold !important;
+}
+
+/* New Forum repply to me */
+.ft-new-forum-msg {
+color: blue !important;
+font-weight: bold !important;
+}
