Remove useless (and wrong) FoxTrick log background image.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6464 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -89,7 +89,7 @@ td.ft-lineup-cell { vertical-align: middle !important; }
 }
 
 #ft-log {
-	background: url("chrome://foxtrick/resources/img/background.png") repeat-y scroll left top #dce2dc;
+	background: #dce2dc;
 	border: 1px solid #abcdef;
 	font-size: 12px !important;
 	max-height: 250px;
