new FoxTrick module for Hattrick Youth Statistics ht-ys.org
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6548 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/headercopyicons.css
+++ b/content/resources/css/headercopyicons.css
@@ -50,5 +50,12 @@ a.copyicon {
 	background: transparent url(chrome://foxtrick/content/resources/img/copy/copyAwayRatings.png) no-repeat scroll 0 0;
 }
 
+.copyyouthfixturessource img {
+    background: transparent url(chrome://foxtrick/content/resources/img/copy/copyNormal.png) no-repeat scroll 0 0;
+}
+.linkyouthstatistics img {
+    background: transparent url(chrome://foxtrick/content/resources/img/copy/copyNormal.png) no-repeat scroll 0 0;
+}
+
 }
 
