some RTL fixing
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6594 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -153,6 +153,7 @@ ul.ft-pop {
 	list-style-type: none;
 	z-index: 100;
 	padding-left: 0px;
+	padding-right: 0px;
 }
 ul.ft-pop.right {
 	right: 0px;
