--- a/content/resources/css/staff-marker.css
+++ b/content/resources/css/staff-marker.css
@@ -7,7 +7,7 @@
 	padding: 1px 1px 1px 18px !important;
 }
 
-.ft-staff-foxtrick {
+.ft-staff-foxtrick{
 	background-image: url("chrome://foxtrick/content/resources/img/staff/foxtrick.png");
 	background-repeat: no-repeat;
 	padding: 1px 1px 1px 18px !important;
@@ -17,6 +17,27 @@
 	background-image: url("chrome://foxtrick/content/resources/img/staff/chpp.png");
 	background-repeat: no-repeat;
 	padding: 1px 1px 1px 24px !important;
+}
+
+.ft-staff-foxtrick-hty {
+	background-image: url("chrome://foxtrick/content/resources/img/staff/foxtrick.png"), url("chrome://foxtrick/content/resources/img/staff/hyouthclub.png");
+	background-repeat: no-repeat, no-repeat;
+	background-position: 0px 0px, 18px 0px;
+	padding: 1px 1px 1px 36px !important;
+}
+
+.ft-staff-chpp-holder-foxtrick {
+	background-image: url("chrome://foxtrick/content/resources/img/staff/chpp.png"), url("chrome://foxtrick/content/resources/img/staff/foxtrick.png");
+	background-repeat: no-repeat, no-repeat;
+	background-position: 0px 0px, 25px 0px;
+	padding: 1px 1px 1px 44px !important;
+}
+
+.ft-staff-chpp-holder-hty {
+	background-image: url("chrome://foxtrick/content/resources/img/staff/chpp.png"), url("chrome://foxtrick/content/resources/img/staff/hyouthclub.png");
+	background-repeat: no-repeat, no-repeat;
+	background-position: 0px 0px, 25px 0px;
+	padding: 1px 1px 1px 44px !important;
 }
 
 .ft-staff-editor {
