local-time.js: use CSS for local time image.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6631 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/local-time-rtl.css
+++ b/content/resources/css/local-time-rtl.css
@@ -7,3 +7,8 @@
 #ft-local-time, #time {
 	cursor: pointer;
 }
+
+.date[x-ht-date] {
+	background: url("chrome://foxtrick/content/resources/img/tz-local.png") no-repeat right center;
+	padding-right: 14px !important;
+}
