css: fixed some css working on other pages
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6644 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/popup-links.css
+++ b/content/resources/css/popup-links.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
+
 .myht1 {
 	position: relative;
 	display:inline;
@@ -58,4 +60,6 @@ div.cfMessage, div.edited, div.cfHeader, div.feedItem, div.cfUserInfo, div.signa
 }
 div.message {
 	overflow:auto;
+}
+
 }
