--- a/content/resources/css/changepost.css
+++ b/content/resources/css/changepost.css
@@ -1,5 +1,9 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
+
 /* forum change post changes */
 div[class="cfHeader ftdoubleLine"]  {height:30px !important;}
 div[class="cfHeader ftdoubleLine"] b:after {content:" " !important;}
 div[class="cfHeader ftdoubleLine"] br {display:none !important; padding: 5px;}
 div[class="message"] pre, #forum_preview  pre, div[class="feedItem"] pre {font-size:12px; white-space:pre-wrap;border: 1px dotted #ABCDEF;padding:2px; margin:2px;}
+
+}
