--- a/content/resources/css/local-time-rtl.css
+++ b/content/resources/css/local-time-rtl.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
+
 #ft-ht-time-icon, #ft-local-time, #ft-local-time-icon {
 	float: left;
 	margin-right: 7px;
@@ -11,4 +13,6 @@
 .date[x-ht-date] {
 	background: url("chrome://foxtrick/content/resources/img/tz-local.png") no-repeat right center;
 	padding-right: 14px !important;
+}
+
 }
