--- a/content/resources/css/local-time-simple-rtl.css
+++ b/content/resources/css/local-time-simple-rtl.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
+
 #ft-ht-time-icon, #ft-local-time, #ft-local-time-icon {
 	float: left;
 	margin-right: 7px;
@@ -6,4 +8,6 @@
 
 #ft-local-time, #time {
 	cursor: pointer;
+}
+
 }
