--- a/content/resources/css/old-style-face.css
+++ b/content/resources/css/old-style-face.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
+
 .faceCard
 {
 	padding: 0px 10px 0px 0px !important;
@@ -9,4 +11,6 @@
 #sidebar .faceCard
 {
 	margin-left: 32px !important;
+}
+
 }
