--- a/content/resources/css/tableSort.css
+++ b/content/resources/css/tableSort.css
@@ -1,3 +1,5 @@
+@-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 /*tablesort*/
 .htMlTable th { cursor: pointer;}
 #mainBody table th { cursor: pointer;}
+}
