series-flags.js: fix missing info during quali and ownerless
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6647 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -124,6 +124,11 @@ td.ft-lineup-cell { vertical-align: middle !important; }
 	margin-left: 10px;
 }
 
+.ft-ownerless {
+	background-image: url("chrome://foxtrick/content/resources/img/ownerless.png");
+	background-repeat: no-repeat;
+	padding: 0px 0px 0px 11px;
+}
 
 
 /* pop lists that are displayed when hovering */
