preferences: shortcut_links prefs -> page sorted preferences
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6661 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -128,6 +128,11 @@ html[dir="rtl"] .screenshot
 	vertical-align: top;
 }
 
+#pagelist
+{
+	font-size: 50%;
+}
+
 ul#tabs li
 {
 	display: inline-block;
@@ -137,6 +142,11 @@ ul#tabs li
 	border-bottom: none;
 	padding: 4px;
 	margin: 0;
+}
+
+ul#tabs li.hide
+{
+	display: none;
 }
 
 ul#tabs li.active
