staff-marker: flags speedup
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6670 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/staff-marker.css
+++ b/content/resources/css/staff-marker.css
@@ -33,7 +33,7 @@
 	padding: 1px 1px 1px 44px !important;
 }
 
-.ft-staff-hty .ft-staff-chpp-holder {
+.ft-staff-hty.ft-staff-chpp-holder {
 	background-image: url("chrome://foxtrick/content/resources/img/staff/chpp.png"), url("chrome://foxtrick/content/resources/img/staff/hyouthclub.png");
 	background-repeat: no-repeat, no-repeat;
 	background-position: 0px 0px, 25px 0px;
@@ -67,4 +67,12 @@
 
 .ft-staff-ht {
 	background-color: red;
+}
+
+.ft-staff-official {
+	background-color: #FFBA00;
+}
+
+.ft-staff-seperator {
+	background-color: #DDD;
 }
