page filtered prefs tweaked
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6673 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -30,6 +30,13 @@ input, button
 	margin: 0 5px 0 0;
 }
 
+button.active
+{
+	background-color: #eef;
+	border: 3px solid #a8a8a8;
+}
+
+
 html[dir="rtl"] input, html[dir="rtl"] button
 {
 	margin: 0 0 0 5px;
