simple skin design fixes. htdateformat for serieshistory
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6677 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/cross-table.css
+++ b/content/resources/css/cross-table.css
@@ -2,6 +2,11 @@
 	text-align: center !important;
 }
 
-#ft-cross-table {
-	background-color: white;
+.ft-cross-table-div {
+	position: relative;
+	z-index:99;
+}
+
+.ft-cross-table-div  td{
+	background-color: white;	
 }
