--- a/content/resources/css/skilltable.css
+++ b/content/resources/css/skilltable.css
@@ -1,12 +1,12 @@
 .ft_skilltablediv { margin: 35px 0 35px -8px; }
 .ft_skilltablediv.transfer { margin: 35px 0; }
 .ft_skilltablediv h2 { margin: 10px 0 !important; }
-.ft_skilltablediv table { width: auto !important; max-width: 100%; margin: 0.1em auto 0.5em auto; white-space: nowrap; border-collapse: collapse; border: 1px solid #dce0dc; }
-.ft_skilltablediv table td:nth-child(even) { background-color: #eeeeee; }
-.ft_skilltablediv table td:nth-child(odd) { background-color: white; }
-.ft_skilltablediv table th { text-align: center !important; }
-.ft_skilltablediv table th, .ft_skilltablediv table td { padding: 1px 2px !important; vertical-align: middle !important; }
-.ft_skilltablediv a { cursor: pointer; }
+.ft_skilltable_container table { width: auto !important; max-width: 100%; margin: 0.1em auto 0.5em auto; white-space: nowrap; border-collapse: collapse; border: 1px solid #dce0dc; }
+.ft_skilltable_container table td:nth-child(even) { background-color: #eeeeee; }
+.ft_skilltable_container table td:nth-child(odd) { background-color: white; }
+.ft_skilltable_container table th { text-align: center !important; }
+.ft_skilltable_container table th, .ft_skilltablediv table td { padding: 1px 2px !important; vertical-align: middle !important; }
+.ft_skilltable_container a { cursor: pointer; }
 .ft_skilltable_wrapper, .ft_skilltable_customizewrapper { max-width: 100%; overflow: auto; }
 .ft_skilltable_links { margin-bottom: 0.5em !important; }
 .ft_skilltable_links a { display: none; margin: 0 0.5em 0 0; }
@@ -16,11 +16,11 @@
 .ft_skilltable_links.customizing .customize_item { display: none; }
 .ft_skilltable_container { background-color: #fff; }
 .ft_skilltable_container.on_top { position: absolute; z-index: 100; padding: 1em; border: 2px solid #888; }
-.ft_skilltable th { cursor: pointer; }
-.ft_skilltable td { border-bottom: 1px solid #dce0dc; }
-.ft_skilltable td.align-right { text-align: right !important; }
-.ft_skilltable td.latest-match { font-weight: bold; }
-.ft_skilltable td.second-latest-match { font-style: italic; }
-.ft_skilltable td.maxed { font-weight: bold; }
-.ft_skilltable td.status img:nth-child(1) { margin-left: 0; }
-.ft_skilltable td.status img { margin-left: 0.5em; }
+.ft_skilltable_container th { cursor: pointer; }
+.ft_skilltable_container td { border-bottom: 1px solid #dce0dc; }
+.ft_skilltable_container td.align-right { text-align: right !important; }
+.ft_skilltable_container td.latest-match { font-weight: bold; }
+.ft_skilltable_container td.second-latest-match { font-style: italic; }
+.ft_skilltable_container td.maxed { font-weight: bold; }
+.ft_skilltable_container td.status img:nth-child(1) { margin-left: 0; }
+.ft_skilltable_container td.status img { margin-left: 0.5em; }
