local-time icon also for simple skin. i haven't seen a spot yet where the icon doesn't fit in simple skin. and it's important to have
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6687 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/local-time-simple.css
+++ b/content/resources/css/local-time-simple.css
@@ -10,4 +10,8 @@
 	cursor: pointer;
 }
 
+.date[x-ht-date] {
+	background: url("chrome://foxtrick/content/resources/img/tz-local.png") no-repeat left center;
+	padding-left: 14px !important;
+}
 }
