skill-table: little RTL fix
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6689 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/skilltable_rtl.css
+++ b/content/resources/css/skilltable_rtl.css
@@ -24,3 +24,5 @@
 .ft_skilltable_container td.maxed { font-weight: bold; }
 .ft_skilltable_container td.status img:nth-child(1) { margin-right: 0; }
 .ft_skilltable_container td.status img { margin-right: 0.5em; }
+.ft_skilltable_container td.formatted-num { direction: ltr; }
+.ft_skilltable_container td.align-left { text-align: left !important; }
