team popup-links: not within messages (overflow:visible would break other stuff)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6698 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/popup-links.css
+++ b/content/resources/css/popup-links.css
@@ -22,6 +22,11 @@ ul.ft-popup-list {
 	left:10px;
 }
 
+/* just not in messages*/
+.message ul.ft-popup-list {
+	visibility:hidden;
+}
+
 ul.ft-popup-list-up {
 	bottom:12px; /* = text height */
 }
