skilltable.css: curser:pointer to skilltablelinks div
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6716 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/skilltable_rtl.css
+++ b/content/resources/css/skilltable_rtl.css
@@ -5,7 +5,7 @@
 .ft_skilltable_container table td:nth-child(even) { background-color: #eeeeee; }
 .ft_skilltable_container table td:nth-child(odd) { background-color: white; }
 .ft_skilltable_container table th { text-align: center !important; }
-.ft_skilltable_container a { cursor: pointer; }
+.ft_skilltable_container a, .ft_skilltable_links  a  { cursor: pointer; }
 .ft_skilltable_wrapper, .ft_skilltable_customizewrapper { max-width: 100%; overflow: auto; }
 .ft_skilltable_links { margin-bottom: 0.5em !important; }
 .ft_skilltable_links a { display: none; margin: 0 0.5em 0 0; }
