--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -184,3 +184,8 @@ ul.ft-pop > li a, ul.ft-pop span {
 	display: block;
 	cursor: pointer;
 }
+
+.ft-monitor-frame  > h2:hover  > div.ft_sort {display:inline;}
+.ft-monitor-frame > h2 > div.ft_sort {float:right; display:none;}
+			
+
