flags to classes (not for tracker links. didn't manage to have them properly placed)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6766 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/my-monitor.css
+++ b/content/resources/css/my-monitor.css
@@ -37,3 +37,8 @@
 #ft-monitor-sidebar-box .hidden {
 	display: none !important; /* need to overwrite */
 }
+
+.mymonitorflag {padding-right: 8px; margin-top:4px; margin-bottom:1px;}
+
+.teamicon {padding: 0 5px 0 0; margin:0 0 -2px}
+				
