api-proxy: added clear cache link. all other then bookedfriendlies and match peek longlived
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6768 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -187,5 +187,5 @@ ul.ft-pop > li a, ul.ft-pop span {
 
 .ft-monitor-frame  > h2:hover  > div.ft_sort {display:inline;}
 .ft-monitor-frame > h2 > div.ft_sort {float:right; display:none;}
-			
 
+#ft_clear_cache {cursor: pointer; color:#3F7137; }
