Replace status bar icon with default toolbar button. (Fixes #766)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6785 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/overlay.css
+++ b/content/resources/css/overlay.css
@@ -1,17 +1,7 @@
-#foxtrick-status-bar-img {
-	width: 16px; height: 16px; cursor: pointer; list-style-image: url(chrome://foxtrick/skin/active.png);
-}
-#foxtrick-status-bar-img[status="enabled"] {
-	list-style-image: url("chrome://foxtrick/skin/enabled.png");
-}
-#foxtrick-status-bar-img[status="disabled"] {
-	list-style-image: url("chrome://foxtrick/skin/disabled.png");
-}
-
-#foxtrick-toolbar-preferences {
+#foxtrick-toolbar-button {
 	list-style-image: url("chrome://foxtrick/skin/icon-24.png");
 }
 
-toolbar[iconsize="small"] #foxtrick-toolbar-preferences {
+toolbar[iconsize="small"] #foxtrick-toolbar-button {
 	list-style-image: url("chrome://foxtrick/skin/icon-16.png");
 }
