foxtrick.xul: set toolbarbutton as menu while orientation is horizontal.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6796 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/overlay.css
+++ b/content/resources/css/overlay.css
@@ -1,5 +1,6 @@
 #foxtrick-toolbar-button {
 	list-style-image: url("chrome://foxtrick/skin/icon-24.png");
+	-moz-box-orient: horizontal;
 }
 
 toolbar[iconsize="small"] #foxtrick-toolbar-button {
