flags.css: fix background image url.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6797 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/flags.css
+++ b/content/resources/css/flags.css
@@ -1,4 +1,4 @@
-.flag > img { background-image: url("foxtrick://content/resources/img/flags.gif"); }
+.flag > img { background-image: url("chrome://foxtrick/content/resources/img/flags.gif"); }
 .flag0 { background-position: 0px 0px; }
 .flag1 { background-position: -20px 0px; }
 .flag2 { background-position: -40px 0px; }
