Adjust preferences interface layout for large screens. (Fixes #782)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6799 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -178,7 +178,6 @@ div#panes
 {
 	border: 1px solid #ccc;
 	clear: both;
-	max-height: 500px;
 	overflow-y: auto;
 }
 
@@ -206,6 +205,11 @@ html[dir="rtl"] #fixed
 html[dir="rtl"] #fixed
 {
 	float: left;
+}
+
+#balloon a {
+	color: #a5b;
+	text-decoration: none;
 }
 
 #save
