--- a/content/resources/css/fixes/League_Table.css
+++ b/content/resources/css/fixes/League_Table.css
@@ -9,7 +9,15 @@
 #ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl05_td1,
 #ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl06_td1,
 #ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl07_td1,
-#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl08_td1
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl08_td1,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl09_td1,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl10_td1,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl11_td1,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl12_td1,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl13_td1,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl14_td1,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl15_td1,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl16_td1
 {
     border-left: 2px solid #DCE0DC;
 }
@@ -23,6 +31,14 @@
 #ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl06_td3,
 #ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl07_td3,
 #ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl08_td3,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl09_td3,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl10_td3,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl11_td3,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl12_td3,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl13_td3,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl14_td3,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl15_td3,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl16_td3,
 #ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl00_td4,
 #ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl01_td4,
 #ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl02_td4,
@@ -31,7 +47,15 @@
 #ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl05_td4,
 #ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl06_td4,
 #ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl07_td4,
-#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl08_td4
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl08_td4,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl09_td4,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl10_td4,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl11_td4,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl12_td4,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl13_td4,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl14_td4,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl15_td4,
+#ctl00_ctl00_CPContent_CPMain_repLeagueTable_ctl16_td4
 {
     border-right: 2px solid #DCE0DC;
 }
@@ -49,7 +73,11 @@
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl09_td1,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl10_td1,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl11_td1,
-#ctl00_ctl00_CPContent_CPMain_repLeague_ctl12_td1
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl12_td1,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl13_td1,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl14_td1,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl15_td1,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl16_td1
 {
     border-left: 2px solid #DCE0DC;
 }
@@ -67,6 +95,10 @@
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl10_td3,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl11_td3,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl12_td3,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl13_td3,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl14_td3,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl15_td3,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl16_td3,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl00_td4,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl01_td4,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl02_td4,
@@ -79,7 +111,11 @@
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl09_td4,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl10_td4,
 #ctl00_ctl00_CPContent_CPMain_repLeague_ctl11_td4,
-#ctl00_ctl00_CPContent_CPMain_repLeague_ctl12_td4
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl12_td4,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl13_td4,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl14_td4,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl15_td4,
+#ctl00_ctl00_CPContent_CPMain_repLeague_ctl16_td4
 {
     border-right: 2px solid #DCE0DC;
 }
