preferences.css: different color for enabled/disabled input controls.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6897 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -21,13 +21,18 @@ p
 	margin: 2px 0;
 }
 
-input, button
+input, button, select, textarea
 {
 	color: #2e2e2e;
 	background-color: white;
 	border: 1px solid #b4bac0;
 	padding: 3px;
 	margin: 0 5px 0 0;
+}
+
+input[disabled], button[disabled], select[disabled], textarea[disabled]
+{
+	background-color: #999;
 }
 
 button.active
