--- a/content/resources/css/preferences.css
+++ b/content/resources/css/preferences.css
@@ -49,7 +49,7 @@ html[dir="rtl"] input, html[dir="rtl"] button
 
 input
 {
-	width: 450px;
+	width: 95%;
 }
 
 input[type] /* only set width for text input */
@@ -62,6 +62,18 @@ textarea {
 	height: 6em;
 }
 
+th.col_checkbox {
+	width: 5%;
+}
+
+th.col_filepicker {
+	width: 10%;
+}
+
+th.col_textfield {
+	width: 60%;
+}
+
 table.bordered, table.bordered td, table.bordered th {
 	border: 1px solid #ccc;
 	border-collapse: collapse;
@@ -69,6 +81,10 @@ table.bordered, table.bordered td, table.bordered th {
 
 table {
 	margin-top: 20px;
+}
+
+table.maxed {
+	width: 100%;
 }
 
 table th:first-child {
