--- a/content/resources/css/local-time-simple.css
+++ b/content/resources/css/local-time-simple.css
@@ -1,8 +1,8 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
-#ft-ht-time-icon, #ft-local-time, #ft-local-time-icon {
+#ft-local-time {
 	float: right;
-	margin-left: 7px;
+	margin-left: 5px;
 	margin-top: 20px;
 }
 
@@ -14,4 +14,15 @@
 	background: url("chrome://foxtrick/content/resources/img/tz-local.png") no-repeat left center;
 	padding-left: 14px !important;
 }
+
+#ft-local-time {
+	background: url("chrome://foxtrick/content/resources/img/tz-local.png") no-repeat 0 0;
+	padding-left: 14px !important;
+}
+
+#time {
+	background: url("chrome://foxtrick/content/resources/img/tz-hattrick.png") no-repeat 0 0;
+	padding-left: 14px !important;
+}
+
 }
