--- a/content/resources/css/local-time.css
+++ b/content/resources/css/local-time.css
@@ -1,6 +1,6 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
-#ft-ht-time-icon, #ft-local-time, #ft-local-time-icon {
+#ft-local-time {
 	float: right;
 	margin-left: 7px;
 	margin-top: 9px;
@@ -12,6 +12,16 @@
 
 .date[x-ht-date] {
 	background: url("chrome://foxtrick/content/resources/img/tz-local.png") no-repeat left center;
+	padding-left: 14px !important;
+}
+
+#ft-local-time {
+	background: url("chrome://foxtrick/content/resources/img/tz-local.png") no-repeat left center;
+	padding-left: 14px !important;
+}
+
+#time {
+	background: url("chrome://foxtrick/content/resources/img/tz-hattrick.png") no-repeat left center;
 	padding-left: 14px !important;
 }
 
