extraschortcuts: fixed ticker max width
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6957 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/extra-shortcuts-space-rtl.css
+++ b/content/resources/css/extra-shortcuts-space-rtl.css
@@ -2,7 +2,7 @@
 
 #scSettingsLink{display:none;}
 div#shortcuts, div#shortcuts div.scContainer {width: 324px !important;} 
-#ticker {width:400px; left: 350px;} 
+#ticker {width:400px !important; left: 350px;} 
 div#ticker div { width:400px !important; overflow:hidden !important; white-space:nowrap !important;} 
 div#ticker div a { padding:0 2px !important; }
 
