--- a/content/resources/css/extra-shortcuts-space.css
+++ b/content/resources/css/extra-shortcuts-space.css
@@ -2,7 +2,7 @@
 
 #scSettingsLink{display:none;}
 div#shortcuts, div#shortcuts div.scContainer {width: 324px !important;} 
-#ticker {width:400px; left: 235px !important;} 
+#ticker {width:400px !important; left: 235px !important;} 
 div#ticker div { width:400px !important; overflow:hidden !important; white-space:nowrap !important;}
 div#ticker div a { padding:0 2px !important; }
 
