util/copy-button.js: fix for display in sidebar under simple theme. (Fixes #791)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6975 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/copy-youth-simple.css
+++ b/content/resources/css/copy-youth-simple.css
@@ -1,15 +1,15 @@
-.ft-copy-training-report {
+.copyicon.ft-copy-training-report {
 	background-image: url("chrome://foxtrick/content/resources/img/copy/copyTrainingReport_s.png");
 }
 
-.ft-copy-scout-comment {
+.copyicon.ft-copy-scout-comment {
 	background-image: url("chrome://foxtrick/content/resources/img/copy/copyScoutReport_s.png");
 }
 
-.ft-copy-player-source {
+.copyicon.ft-copy-player-source {
 	background-image: url("chrome://foxtrick/content/resources/img/copy/copyPlayerSource_s.png");
 }
 
-.ft-copy-fixtures-source {
+.copyicon.ft-copy-fixtures-source {
 	background-image: url("chrome://foxtrick/content/resources/img/copy/copyNormal_s.png");
 }
