--- a/content/resources/css/headercopyicons_rtl.css
+++ b/content/resources/css/headercopyicons_rtl.css
@@ -2,9 +2,23 @@
 
 a.copyicon {
 	cursor: pointer;
-	position:absolute;
-	 top:11px;
-	 z-index:99;
+	top: 11px;
+	height: 36px;
+	width: 36px;
+	z-index:99;
+	background-repeat: no-repeat;
+	display: inline-block !important;
+}
+
+/* For icons in the header */
+#mainBody .copyicon {
+	position: absolute;
+}
+
+.copyicon img {
+	padding: 0px 0px 0px 0px;
+	height:36px;
+	width:36px;
 }
 
 /* header icons postitions */
@@ -13,13 +27,6 @@ a.copyicon {
 .ci_third {left:88px;}
 .ci_fourth{left:125px;}
 .ci_fifth{left:162px;}
-
-
-.copyicon img {
-	padding: 0px 0px 0px 0px;
-	height:36px;
-	width:36px;
-}
 
 .linkyouthstatistics img {
     background: transparent url(chrome://foxtrick/content/resources/img/copy/copyNormal.png) no-repeat scroll 0 0;
