--- a/content/resources/css/copy-player-ad.css
+++ b/content/resources/css/copy-player-ad.css
@@ -1,3 +1,3 @@
-.ft-copy-player-ad {
+.copyicon.ft-copy-player-ad {
 	background-image: url("chrome://foxtrick/content/resources/img/copy/copyPlayerAd.png");
 }
