--- a/content/resources/css/copy-ratings-simple.css
+++ b/content/resources/css/copy-ratings-simple.css
@@ -1,3 +1,3 @@
-.ft-copy-ratings {
+.copyicon.ft-copy-ratings {
 	background-image: url("chrome://foxtrick/content/resources/img/copy/copyMatchRatings_s.png");
 }
