--- a/content/resources/css/headercopyicons_simple.css
+++ b/content/resources/css/headercopyicons_simple.css
@@ -2,9 +2,21 @@
 
 a.copyicon {
 	cursor: pointer;
-	position:absolute;
-	 top:6px;
-	 z-index:99;
+	top:6px;
+	z-index:99;
+	background-repeat: no-repeat;
+	display: inline-block !important;
+}
+
+.copyicon img {
+	padding: 0px 0px 0px 0px;
+	height:22px;
+	width:22px;
+}
+
+/* For icons in the header */
+#mainBody .copyicon {
+	position: absolute;
 }
 
 /* header icons postitions */
@@ -13,13 +25,6 @@ a.copyicon {
 .ci_third {right:56px;}
 .ci_fourth{right:81px;}
 .ci_fifth{right:106px;}
-
-
-.copyicon img {
-	padding: 0px 0px 0px 0px;
-	height:22px;
-	width:22px;
-}
 
 .linkyouthstatistics img {
     background: transparent url(chrome://foxtrick/content/resources/img/copy/copyNormal_s.png) no-repeat scroll 0 0;
