Fix drop down list in simple theme.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@6981 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/foxtrick.css
+++ b/content/resources/css/foxtrick.css
@@ -162,8 +162,8 @@ ul.ft-pop {
 	position: absolute;
 	list-style-type: none;
 	z-index: 100;
-	padding-left: 0px;
-	padding-right: 0px;
+	padding: 0px;
+	margin: 0px;
 }
 ul.ft-pop.right {
 	right: 0px;
