--- a/content/resources/css/headercopyicons_simple.css
+++ b/content/resources/css/headercopyicons_simple.css
@@ -3,6 +3,8 @@
 a.copyicon {
 	cursor: pointer;
 	top:6px;
+	height: 22px;
+	width: 22px;
 	z-index:99;
 	background-repeat: no-repeat;
 	display: inline-block !important;
