--- a/content/resources/css/local-time.css
+++ b/content/resources/css/local-time.css
@@ -1,28 +1,50 @@
 @-moz-document domain(hattrick.org), domain(hattrick.uol.com.br), domain(hattrick.interia.pl), domain(hattrick.ws) {
 
-#ft-local-time {
+/* local clock positions */
+[dir="ltr"] #ft-local-time {
 	float: right;
-	margin-left: 7px;
-	margin-top: 9px;
+}
+[dir="rtl"] #ft-local-time {
+	float: left;
 }
 
+[x-theme="standard"] #ft-local-time {
+	margin-top: 9px;
+}
+[x-theme="simple"] #ft-local-time {
+	margin-top: 20px;
+}
+
+[dir="ltr"][x-theme="standard"] #ft-local-time {
+	margin-left: 7px;
+}
+[dir="ltr"][x-theme="simple"] #ft-local-time {
+	margin-left: 5px;
+}
+
+/* make the clocks seemingly clickable */
 #ft-local-time, #time {
 	cursor: pointer;
 }
 
-.date[x-ht-date] {
-	background: url("chrome://foxtrick/content/resources/img/tz-local.png") no-repeat left center;
-	padding-left: 14px !important;
+/* background */
+.date[x-ht-date], #ft-local-time {
+	background-image: url("chrome://foxtrick/content/resources/img/tz-local.png");
+	background-repeat: no-repeat;
 }
-
-#ft-local-time {
-	background: url("chrome://foxtrick/content/resources/img/tz-local.png") no-repeat left center;
-	padding-left: 14px !important;
-}
-
 #time {
-	background: url("chrome://foxtrick/content/resources/img/tz-hattrick.png") no-repeat left center;
+	background-image: url("chrome://foxtrick/content/resources/img/tz-hattrick.png");
+	background-repeat: no-repeat;
+}
+
+/* reserve space for background */
+[dir="ltr"] .date[x-ht-date], [dir="ltr"] #ft-local-time, [dir="ltr"] #time {
 	padding-left: 14px !important;
+	background-position: left center;
+}
+[dir="rtl"] .date[x-ht-date], [dir="rtl"] #ft-local-time, [dir="rtl"] #time {
+	padding-right: 14px !important;
+	background-position: right center;
 }
 
 }
