rapid-id.js: merge CSS files.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7000 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/rapidid.css
+++ b/content/resources/css/rapidid.css
@@ -1,3 +1,7 @@
-/*RapidId*/
-#ft_rapidid { margin-top: 9px; margin-left: 7px; }
+[x-theme="standard"] #ft_rapidid { margin-top: 9px; margin-left: 7px; }
+[x-theme="simple"] #ft_rapidid { margin-top: 20px; margin-left: 5px; }
+
 #ft_rapidid a { cursor: pointer; text-decoration: underline; }
+
+[x-theme="simple"] #ft_rapidid_form { font-size: 1.1em; }
+[x-theme="simple"] #ft_rapidid_container { font-size: 100%; }
