forum-change-posts-modules.js: use CSS to replace CSS_SIMPLE.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7001 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/fixes/Forum_Header_Single_SimpleFix.css
+++ b/content/resources/css/fixes/Forum_Header_Single_SimpleFix.css
@@ -2,7 +2,7 @@
 
 
 /* broken dsign workaround*/
-div.cfHeader>div[class="float_right right"]
+[x-theme="simple"] div.cfHeader>div[class="float_right right"]
 {background: inherit;/* #999999 !important;*/}
 
 }
